Fixed random visible navbar link with responsive

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -144,7 +144,7 @@ a:visited {
 		float: none;
 	}
 	.nav-right a {
-		float: none;
+		display: none;
 	}
 	.navbar.responsive {
 		position: relative;
